test/conformance/chainsaw/verifyImages/clusterpolicy/standard/notary-image-verification/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: test
  name: test
  namespace: notary-verify-images
spec:
  containers:
  - image: ghcr.io/kyverno/test-verify-image:signed
    name: test
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
