test/conformance/chainsaw/verifyImages/clusterpolicy/standard/notary-image-verification/policy-ready.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: check-image-notary
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
