test/conformance/chainsaw/verifyImages/clusterpolicy/standard/notary-image-verification/pod-assert.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test
  namespace: notary-verify-images
